VS2010版二次开发包SDK_V170621（含C#）厂家/VC6Demo/LEDAPI.h

//Chapter和Leaf中，播放时间控制
#define WAIT_USE_TIME      0  //按照指定的时间长度播放，到时间就切到下一个
#define WAIT_CHILD         1  //等待子项目的播放，如果到了指定的时间长度，而子项目还没有播完，则等待播完
#define ROOT_PLAY_LEAF         0x27  //插入或者更新某一页面
#define WFS_BOLD               0x01  //粗体
//生成播放数据
//  RootType 为播放类型；=ROOT_PLAY表示更新控制卡RAM中的节目(掉电丢失)；=ROOT_DOWNLOAD表示更新控制卡Flash中的节目(掉电不丢失)
//  ColorMode 为颜色模式；取值为COLOR_MODE_MONO或者COLOR
//  survive 为RAM节目生存时间，在RootType=ROOT_PLAY时有效，当RAM节目播放达到时间后，恢复显示FLASH中的节目
long (_stdcall *MakeRoot)(long RootType, long ColorMode, long survive = ROOT_SURVIVE_ALWAYS);
//生成节目数据，后续需要调用[AddRegion]->[AddLeaf]->[AddObject]->[AddWindows/AddDateTime等]
//  RootType 必须设为ROOT_PLAY_CHAPTER
//  ActionMode 必须设为0
//  ChapterIndex 要更新的节目序号
//  ColorMode 同MakeRoot中的定义
//  time 播放的时间长度
//  wait 等待模式，=WAIT_CHILD，表示当达到播放时间长度时，需要等待子节目播放完成再切换；
//                 =WAIT_USE_TIME，表示当达到播放时间长度时，不等待子节目播放完成，直接切换下一节目
long (_stdcall *MakeChapter)(long RootType, long ActionMode, long ChapterIndex, long ColorMode, DWORD time, WORD wait);
//生成分区，后续需要调用[AddLeaf]->[AddObject]->[AddWindows/AddDateTime等]
//  RootType 必须设为ROOT_PLAY_REGION
//  ActionMode 必须设为0
//  ChapterIndex 要更新的节目序号
//  RegionIndex 要更新的分区序号
//  ColorMode 同MakeRoot中的定义
//  left、top、width、height 左、上、宽度、高度
//  border 流水边框
long (_stdcall *MakeRegion)(long RootType, long ActionMode, long ChapterIndex, long RegionIndex, long ColorMode, long left, long top, long width, long height, long border);
//生成页面，后续需要调用[AddObject]->[AddWindows/AddDateTime等]
//  RootType 必须设为ROOT_PLAY_LEAF
//  ActionMode 必须设为0
//  ChapterIndex 要更新的节目序号
//  RegionIndex 要更新的分区序号
//  LeafIndex 要更新的页面序号
//  ColorMode 同MakeRoot中的定义
//  time 播放的时间长度
//  wait 等待模式，=WAIT_CHILD，表示当达到播放时间长度时，需要等待子节目播放完成再切换；
//                 =WAIT_USE_TIME，表示当达到播放时间长度时，不等待子节目播放完成，直接切换下一页面
long (_stdcall *MakeLeaf)(long RootType, long ActionMode, long ChapterIndex, long RegionIndex, long LeafIndex, long ColorMode, DWORD time, WORD wait);
//生成播放对象，后续需要调用[AddWindows/AddDateTime等]
//  RootType 必须设为ROOT_PLAY_OBJECT
//  ActionMode 必须设为0
//  ChapterIndex 要更新的节目序号
//  RegionIndex 要更新的分区序号
//  LeafIndex 要更新的页面序号
//  ObjectIndex 要更新的对象序号
//  ColorMode 同MakeRoot中的定义
long (_stdcall *MakeObject)(long RootType, long ActionMode, long ChapterIndex, long RegionIndex, long LeafIndex, long ObjectIndex, long ColorMode);
//添加节目
//  num 节目数据缓冲区编号，是MakeRoot的返回值
//  time 播放的时间长度
//  wait 等待模式，=WAIT_CHILD，表示当达到播放时间长度时，需要等待子节目播放完成再切换；
//                 =WAIT_USE_TIME，表示当达到播放时间长度时，不等待子节目播放完成，直接切换下一节目
long (_stdcall *AddChapter)(WORD num, DWORD time, WORD wait); //time为毫秒
//添加分区
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter的返回值
//  left、top、width、height 左、上、宽度、高度
//  border 流水边框
long (_stdcall *AddRegion)(WORD num, long left, long top, long width, long height, long border);
//添加页面
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion的返回值
//  time 播放的时间长度
//  wait 等待模式，=WAIT_CHILD，表示当达到播放时间长度时，需要等待子节目播放完成再切换；
//                 =WAIT_USE_TIME，表示当达到播放时间长度时，不等待子节目播放完成，直接切换下一页面
long (_stdcall *AddLeaf)(WORD num, DWORD time, WORD wait); //time为毫秒
//添加日期时间显示
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  left、top、width、height 左、上、宽度、高度
//  transparent 是否透明 =1表示透明；=0表示不透明
//  border 流水边框(未实现)
//  fontname 字体名称
//  fontsize 字体大小
//  fontcolor 字体颜色
//  fontstyle 字体样式 举例：=WFS_BOLD表示粗体；=WFS_ITALIC表示斜体；=WFS_BOLD+WFS_ITALIC表示粗斜体
//  year_offset 年偏移量
//  month_offset 月偏移量
//  day_offset 日偏移量
//  sec_offset 秒偏移量
//  format 显示格式 
//      #y表示年 #m表示月 #d表示日 #h表示时 #n表示分 #s表示秒 #w表示星期 #c表示农历
//      举例： format="#y年#m月#d日 #h时#n分#s秒 星期#w 农历#c"时，显示为"2009年06月27日 12时38分45秒 星期六 农历五月初五"
long (_stdcall *AddDateTime)(WORD num, long left, long top, long width, long height, long transparent, long border,
		char* fontname, long fontsize, long fontcolor, long fontstyle, 
        long year_offset, long month_offset, long day_offset, long sec_offset, char* format);
//添加模拟时钟
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  left、top、width、height 左、上、宽度、高度
//  transparent 是否透明 =1表示透明；=0表示不透明
//  border 流水边框(未实现)
//  offset 秒偏移量
//  bkcolor: 背景颜色
//  framecolor: 表框颜色
//  framewidth: 表框颜色
//  frameshape: 表框形状 =0表示正方形；=1表示圆角方形；=2表示圆形
//  dotradius: 刻度距离表盘中心半径
//  adotwidth: 0369点刻度大小
//  adotcolor: 0369点刻度颜色
//  bdotwidth: 其他点刻度大小
//  bdotcolor: 其他点刻度颜色
//  hourwidth: 时针粗细
//  hourcolor: 时针颜色
//  minutewidth: 分针粗细
//  minutecolor: 分针颜色
//  secondwidth: 秒针粗细
//  secondcolor: 秒针颜色
long (_stdcall *AddClock)(WORD num, long left, long top, long width, long height, long transparent, long border, long offset,
		DWORD bkcolor, DWORD framecolor, DWORD framewidth, long frameshape,
		long dotradius, long adotwidth, DWORD adotcolor, long bdotwidth, DWORD bdotcolor,
        long hourwidth, DWORD hourcolor, long minutewidth, DWORD minutecolor, long secondwidth, DWORD secondcolor);
//添加动画
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  left、top、width、height 左、上、宽度、高度
//  transparent 是否透明 =1表示透明；=0表示不透明
//  border 流水边框(未实现)
//  filename avi文件名
//  stretch: 图像是否拉伸以适应对象大小
long (_stdcall *AddMovie)(WORD num, long left, long top, long width, long height, long transparent, long border, char* filename, long stretch);
//添加图片组播放
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  left、top、width、height 左、上、宽度、高度
//  transparent 是否透明 =1表示透明；=0表示不透明
//  border 流水边框(未实现)
long (_stdcall *AddWindows)(WORD num, long left, long top, long width, long height, long transparent, long border);
//添加图片组的子图片 此函数要跟在AddWindows后面调用
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  dc 源图片DC句柄
//  width 图片宽度
//  height 图片高度
//  inmethod 引入方式(下面有列表说明)
//  inspeed 引入速度(取值范围0-5，从快到慢)
//  outmethod 引出方式(下面有列表说明)
//  outspeed 引出速度(取值范围0-5，从快到慢)
//  stopmethod 停留方式(下面有列表说明)
//  stopspeed 停留速度(取值范围0-5，从快到慢)
//  stoptime 停留时间(单位毫秒)
long (_stdcall *AddChildWindow)(WORD num, HDC dc, long width, long height, long alignment, long inmethod, long inspeed, long outmethod, long outspeed, long stopmethod, long stopspeed, long stoptime); //stoptime单位为秒
//添加图片组的子图片 此函数要跟在AddWindows后面调用
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  filename 图片文件名
//  inmethod 引入方式(下面有列表说明)
//  inspeed 引入速度(取值范围0-5，从快到慢)
//  outmethod 引出方式(下面有列表说明)
//  outspeed 引出速度(取值范围0-5，从快到慢)
//  stopmethod 停留方式(下面有列表说明)
//  stopspeed 停留速度(取值范围0-5，从快到慢)
//  stoptime 停留时间(单位毫秒)
long (_stdcall *AddChildPicture)(WORD num, char* filename, long alignment, long inmethod, long inspeed, long outmethod, long outspeed, long stopmethod, long stopspeed, long stoptime); //stoptime单位为秒
//添加图片组的子图片 此函数要跟在AddWindows后面调用
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  str 文字字符串
//  fontname 字体名称
//  fontsize 字体大小
//  fontcolor 字体颜色
//  fontstyle 字体样式 举例：=WFS_BOLD表示粗体；=WFS_ITALIC表示斜体；=WFS_BOLD+WFS_ITALIC表示粗斜体
//  wordwrap 是否自动换行 =1自动换行；=0不自动换行
//  inmethod 引入方式(下面有列表说明)
//  inspeed 引入速度(取值范围0-5，从快到慢)
//  outmethod 引出方式(下面有列表说明)
//  outspeed 引出速度(取值范围0-5，从快到慢)
//  stopmethod 停留方式(下面有列表说明)
//  stopspeed 停留速度(取值范围0-5，从快到慢)
//  stoptime 停留时间(单位毫秒)
long (_stdcall *AddChildText)(WORD num, char* str, char* fontname, long fontsize, long fontcolor, long fontstyle, long wordwrap, long alignment, long inmethod, long inspeed, long outmethod, long outspeed, long stopmethod, long stopspeed, long stoptime); //stoptime单位为毫秒
//添加内码文字组播放
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  left、top、width、height 左、上、宽度、高度
//  transparent 是否透明 =1表示透明；=0表示不透明
//  border 流水边框(未实现)
long (_stdcall *AddStrings)(WORD num, long left, long top, long width, long height, long transparent, long border);
//添加图片组的子图片 此函数要跟在AddWindows后面调用
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  str 文字字符串
//  fontset 字库 =FONTSET_16P表示16点阵字库；=FONTSET_24P表示24点阵字库
//  color 颜色
//  inmethod 引入方式(下面有列表说明)
//  inspeed 引入速度(取值范围0-5，从快到慢)
//  outmethod 引出方式(下面有列表说明)
//  outspeed 引出速度(取值范围0-5，从快到慢)
//  stopmethod 停留方式(下面有列表说明)
//  stopspeed 停留速度(取值范围0-5，从快到慢)
//  stoptime 停留时间(单位毫秒)
long (_stdcall *AddChildString)(WORD num, char* str, long fontset, long color, long inmethod, long inspeed, long outmethod, long outspeed, long stopmethod, long stopspeed, long stoptime); //stoptime单位为毫秒
//添加图片点阵播放
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  left、top、width、height 左、上、宽度、高度
//  transparent 是否透明 =1表示透明；=0表示不透明
//  border 流水边框(未实现)
//  dc 源图片DC句柄
//  src_width 图片宽度
//  src_height 图片高度
//  inmethod 引入方式(下面有列表说明)
//  inspeed 引入速度(取值范围0-5，从快到慢)
//  outmethod 引出方式(下面有列表说明)
//  outspeed 引出速度(取值范围0-5，从快到慢)
//  stopmethod 停留方式(下面有列表说明)
//  stopspeed 停留速度(取值范围0-5，从快到慢)
//  stoptime 停留时间(单位毫秒)
long (_stdcall *AddWindow)(WORD num, long left, long top, long width, long height, long transparent, long border,
		HDC dc, long src_width, long src_height, long alignment, long inmethod, long inspeed, long outmethod, long outspeed, long stopmethod, long stopspeed, long stoptime); //stoptime单位为毫秒
//添加图片文件播放
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  left、top、width、height 左、上、宽度、高度
//  transparent 是否透明 =1表示透明；=0表示不透明
//  border 流水边框(未实现)
//  filename 图片文件
//  inmethod 引入方式(下面有列表说明)
//  inspeed 引入速度(取值范围0-5，从快到慢)
//  outmethod 引出方式(下面有列表说明)
//  outspeed 引出速度(取值范围0-5，从快到慢)
//  stopmethod 停留方式(下面有列表说明)
//  stopspeed 停留速度(取值范围0-5，从快到慢)
//  stoptime 停留时间(单位毫秒)
long (_stdcall *AddPicture)(WORD num, long left, long top, long width, long height, long transparent, long border,
		char* filename, long alignment, long inmethod, long inspeed, long outmethod, long outspeed, long stopmethod, long stopspeed, long stoptime); //stoptime单位为毫秒
//添加文字播放
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  left、top、width、height 左、上、宽度、高度
//  transparent 是否透明 =1表示透明；=0表示不透明
//  border 流水边框(未实现)
//  str 文字字符串
//  fontname 字体名称
//  fontsize 字体大小
//  fontcolor 字体颜色
//  fontstyle 字体样式 举例：=WFS_BOLD表示粗体；=WFS_ITALIC表示斜体；=WFS_BOLD+WFS_ITALIC表示粗斜体
//  wordwrap 是否自动换行 =1自动换行；=0不自动换行
//  alignment 对齐方式 0靠左 1居中 2靠右
//  inmethod 引入方式(下面有列表说明)
//  inspeed 引入速度(取值范围0-5，从快到慢)
//  outmethod 引出方式(下面有列表说明)
//  outspeed 引出速度(取值范围0-5，从快到慢)
//  stopmethod 停留方式(下面有列表说明)
//  stopspeed 停留速度(取值范围0-5，从快到慢)
//  stoptime 停留时间(单位毫秒)
long (_stdcall *AddText)(WORD num, long left, long top, long width, long height, long transparent, long border,
		char* str, char* fontname, long fontsize, long fontcolor, long fontstyle, long wordwrap, long alignment, 
		long inmethod, long inspeed, long outmethod, long outspeed, long stopmethod, long stopspeed, long stoptime); //stoptime单位为毫秒
//添加表格
//  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
//  left、top、width、height 左、上、宽度、高度
//  transparent 是否透明 =1表示透明；=0表示不透明
//  profile 表格配置文件
//  content 表格内容
//  inmethod 引入方式(下面有列表说明)
//  inspeed 引入速度(取值范围0-5，从快到慢)
//  outmethod 引出方式(下面有列表说明)
//  outspeed 引出速度(取值范围0-5，从快到慢)
//  stopmethod 停留方式(下面有列表说明)
//  stopspeed 停留速度(取值范围0-5，从快到慢)
//  stoptime 停留时间(单位毫秒)
long (_stdcall *AddTable)(WORD num, long left, long top, long width, long height, long transparent, char* profile, char* content,
            long inmethod, long inspeed, long outmethod, long outspeed, long stopmethod, long stopspeed, long stoptime);