VS2010版二次开发包SDK_V170621（含C#）厂家/VB6Demo/LEDAPI.bas


'生成播放对象，后续需要调用[AddWindows/AddDateTime等]
'  RootType 必须设为ROOT_PLAY_LEAF
'  ActionMode 必须设为0
'  ChapterIndex 要更新的节目序号
'  RegionIndex 要更新的分区/区域序号
'  LeafIndex 要更新的页面序号
'  ObjectIndex 要更新的对象序号
'  ColorMode 同MakeRoot中的定义
Declare Function MakeObject Lib "LEDSender2010.dll" (ByVal RootType As Long, ByVal ActionMode As Long, ByVal ChapterIndex As Long, ByVal RegionIndex As Long, ByVal LeafIndex As Long, ByVal ObjectIndex As Long, ByVal ColorMode As Long) As Long

'添加节目
'  num 节目数据缓冲区编号，是MakeRoot的返回值
'  time 播放的时间长度，单位为毫秒
'  wait 等待模式，=WAIT_CHILD，表示当达到播放时间长度时，需要等待子节目播放完成再切换；
'                 =WAIT_USE_TIME，表示当达到播放时间长度时，不等待子节目播放完成，直接切换下一节目
Declare Function AddChapter Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal time As Long, ByVal wait As Integer) As Long

'添加分区/区域
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter的返回值
'  left、top、width、height 左、上、宽度、高度
'  border 流水边框
Declare Function AddRegion Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal left As Long, ByVal top As Long, ByVal width As Long, ByVal height As Long, ByVal border As Long) As Long

'添加页面
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion的返回值
'  time 播放的时间长度，单位为毫秒
'  wait 等待模式，=WAIT_CHILD，表示当达到播放时间长度时，需要等待子节目播放完成再切换；
'                 =WAIT_USE_TIME，表示当达到播放时间长度时，不等待子节目播放完成，直接切换下一页面
Declare Function AddLeaf Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal time As Long, ByVal wait As Integer) As Long

'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

'添加日期时间显示
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  left、top、width、height 左、上、宽度、高度
'  transparent 是否透明 =1表示透明；=0表示不透明
'  border 流水边框(未实现)
'  fontname 字体名称
'  fontsize 字体大小
'  fontcolor 字体颜色
'  fontstyle 字体样式 举例：=WFS_BOLD表示粗体；=WFS_ITALIC表示斜体；=WFS_BOLD+WFS_ITALIC表示粗斜体
'  year_offset 年偏移量
'  month_offset 月偏移量
'  day_offset 日偏移量
'  sec_offset 秒偏移量
'  format 显示格式
'      #y表示年 #m表示月 #d表示日 #h表示时 #n表示分 #s表示秒 #w表示星期 #c表示农历
'      举例： format="#y年#m月#d日 #h时#n分#s秒 星期#w 农历#c"时，显示为"2009年06月27日 12时38分45秒 星期六 农历五月初五"
Declare Function AddDateTime Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal left As Long, ByVal top As Long, ByVal width As Long, ByVal height As Long, ByVal transparent As Long, ByVal border As Long, ByVal fontname As String, ByVal fontsize As Long, ByVal fontcolor As Long, ByVal fontstyle As Long, ByVal year_offset As Long, ByVal month_offset As Long, ByVal day_offset As Long, ByVal sec_offset As Long, ByVal format As String) As Long

'添加模拟时钟
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  left、top、width、height 左、上、宽度、高度
'  transparent 是否透明 =1表示透明；=0表示不透明
'  border 流水边框(未实现)
'  offset 秒偏移量
'  bkcolor: 背景颜色
'  bordercolor: 边框颜色
'  borderwidth: 边框颜色
'  bordershape: 边框形状 =0表示正方形；=1表示圆角方形；=2表示圆形
'  dotradius: 刻度距离表盘中心半径
'  adotwidth: 0369点刻度大小
'  adotcolor: 0369点刻度颜色
'  bdotwidth: 其他点刻度大小
'  bdotcolor: 其他点刻度颜色
'  hourwidth: 时针粗细
'  hourcolor: 时针颜色
'  minutewidth: 分针粗细
'  minutecolor: 分针颜色
'  secondwidth: 秒针粗细
'  secondcolor: 秒针颜色
Declare Function AddClock Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal left As Long, ByVal top As Long, ByVal width As Long, ByVal height As Long, ByVal transparent As Long, ByVal border As Long, ByVal offset As Long, ByVal bkcolor As Long, ByVal bordercolor As Long, ByVal borderwidth As Long, ByVal bordershape As Long, ByVal dotradius As Long, ByVal adotwidth As Long, ByVal adotcolor As Long, ByVal bdotwidth As Long, ByVal bdotcolor As Long, ByVal hourwidth As Long, ByVal hourcolor As Long, ByVal minutewidth As Long, ByVal minutecolor As Long, ByVal secondwidth As Long, ByVal secondcolor As Long) As Long

'添加动画
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  left、top、width、height 左、上、宽度、高度
'  filename avi文件名
'  stretch: 图像是否拉伸以适应对象大小
Declare Function AddMovie Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal left As Long, ByVal top As Long, ByVal width As Long, ByVal height As Long, ByVal transparent As Long, ByVal border As Long, ByVal filename As String, ByVal stretch As Long) As Long

'添加图片组播放
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  left、top、width、height 左、上、宽度、高度
'  transparent 是否透明 =1表示透明；=0表示不透明
'  border 流水边框(未实现)
Declare Function AddWindows Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal left As Long, ByVal top As Long, ByVal width As Long, ByVal height As Long, ByVal transparent As Long, ByVal border As Long) As Long

'添加图片组的子图片 此函数要跟在AddWindows后面调用
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  dc 源图片DC句柄
'  width 图片宽度
'  height 图片高度
'  inmethod 引入方式(下面有列表说明)
'  inspeed 引入速度(取值范围0-5，从快到慢)
'  outmethod 引出方式(下面有列表说明)
'  outspeed 引出速度(取值范围0-5，从快到慢)
'  stopmethod 停留方式(下面有列表说明)
'  stopspeed 停留速度(取值范围0-5，从快到慢)
'  stoptime 停留时间(单位毫秒)
Declare Function AddChildWindow Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal dc As Long, ByVal src_width As Long, ByVal src_height As Long, ByVal alignment As Long, ByVal inmethod As Long, ByVal inspeed As Long, ByVal outmethod As Long, ByVal outspeed As Long, ByVal stopmethod As Long, ByVal stopspeed As Long, ByVal stoptime As Long) As Long

'添加图片组的子图片 此函数要跟在AddWindows后面调用
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  filename 图片文件名
'  inmethod 引入方式(下面有列表说明)
'  inspeed 引入速度(取值范围0-5，从快到慢)
'  outmethod 引出方式(下面有列表说明)
'  outspeed 引出速度(取值范围0-5，从快到慢)
'  stopmethod 停留方式(下面有列表说明)
'  stopspeed 停留速度(取值范围0-5，从快到慢)
'  stoptime 停留时间(单位毫秒)
Declare Function AddChildPicture Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal filename As String, ByVal alignment As Long, ByVal inmethod As Long, ByVal inspeed As Long, ByVal outmethod As Long, ByVal outspeed As Long, ByVal stopmethod As Long, ByVal stopspeed As Long, ByVal stoptime As Long) As Long

'添加图片组的子图片 此函数要跟在AddWindows后面调用
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  str 文字字符串
'  fontname 字体名称
'  fontsize 字体大小
'  fontcolor 字体颜色
'  fontstyle 字体样式 举例：=WFS_BOLD表示粗体；=WFS_ITALIC表示斜体；=WFS_BOLD+WFS_ITALIC表示粗斜体
'  wordwrap 是否自动换行 =1自动换行；=0不自动换行
'  inmethod 引入方式(下面有列表说明)
'  inspeed 引入速度(取值范围0-5，从快到慢)
'  outmethod 引出方式(下面有列表说明)
'  outspeed 引出速度(取值范围0-5，从快到慢)
'  stopmethod 停留方式(下面有列表说明)
'  stopspeed 停留速度(取值范围0-5，从快到慢)
'  stoptime 停留时间(单位毫秒)
Declare Function AddChildText Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal str As String, ByVal fontname As String, ByVal fontsize As Long, ByVal fontcolor As Long, ByVal fontstyle As Long, ByVal wordwrap As Long, ByVal alignment As Long, ByVal inmethod As Long, ByVal inspeed As Long, ByVal outmethod As Long, ByVal outspeed As Long, ByVal stopmethod As Long, ByVal stopspeed As Long, ByVal stoptime As Long) As Long

'添加内码文字组播放
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  left、top、width、height 左、上、宽度、高度
'  transparent 是否透明 =1表示透明；=0表示不透明
'  border 流水边框(未实现)
Declare Function AddStrings Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal left As Long, ByVal top As Long, ByVal width As Long, ByVal height As Long, ByVal transparent As Long, ByVal border As Long) As Long

'添加图片组的子图片 此函数要跟在AddWindows后面调用
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  str 文字字符串
'  fontset 字库 =FONTSET_16P表示16点阵字库；=FONTSET_24P表示24点阵字库
'  color 颜色
'  inmethod 引入方式(下面有列表说明)
'  inspeed 引入速度(取值范围0-5，从快到慢)
'  outmethod 引出方式(下面有列表说明)
'  outspeed 引出速度(取值范围0-5，从快到慢)
'  stopmethod 停留方式(下面有列表说明)
'  stopspeed 停留速度(取值范围0-5，从快到慢)
'  stoptime 停留时间(单位毫秒)
Declare Function AddChildString Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal str As String, ByVal fontset As Long, ByVal color As Long, ByVal inmethod As Long, ByVal inspeed As Long, ByVal outmethod As Long, ByVal outspeed As Long, ByVal stopmethod As Long, ByVal stopspeed As Long, ByVal stoptime As Long) As Long

'添加图片点阵播放
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  left、top、width、height 左、上、宽度、高度
'  transparent 是否透明 =1表示透明；=0表示不透明
'  border 流水边框(未实现)
'  dc 源图片DC句柄
'  src_width 图片宽度
'  src_height 图片高度
'  inmethod 引入方式(下面有列表说明)
'  inspeed 引入速度(取值范围0-5，从快到慢)
'  outmethod 引出方式(下面有列表说明)
'  outspeed 引出速度(取值范围0-5，从快到慢)
'  stopmethod 停留方式(下面有列表说明)
'  stopspeed 停留速度(取值范围0-5，从快到慢)
'  stoptime 停留时间(单位毫秒)
Declare Function AddWindow Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal left As Long, ByVal top As Long, ByVal width As Long, ByVal height As Long, ByVal transparent As Long, ByVal border As Long, ByVal dc As Long, ByVal src_width As Long, ByVal src_height As Long, ByVal alignment As Long, ByVal inmethod As Long, ByVal inspeed As Long, ByVal outmethod As Long, ByVal outspeed As Long, ByVal stopmethod As Long, ByVal stopspeed As Long, ByVal stoptime As Long) As Long

'添加图片文件播放
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  left、top、width、height 左、上、宽度、高度
'  transparent 是否透明 =1表示透明；=0表示不透明
'  border 流水边框(未实现)
'  filename 图片文件
'  inmethod 引入方式(下面有列表说明)
'  inspeed 引入速度(取值范围0-5，从快到慢)
'  outmethod 引出方式(下面有列表说明)
'  outspeed 引出速度(取值范围0-5，从快到慢)
'  stopmethod 停留方式(下面有列表说明)
'  stopspeed 停留速度(取值范围0-5，从快到慢)
'  stoptime 停留时间(单位毫秒)
Declare Function AddPicture Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal left As Long, ByVal top As Long, ByVal width As Long, ByVal height As Long, ByVal transparent As Long, ByVal border As Long, ByVal filename As String, ByVal alignment As Long, ByVal inmethod As Long, ByVal inspeed As Long, ByVal outmethod As Long, ByVal outspeed As Long, ByVal stopmethod As Long, ByVal stopspeed As Long, ByVal stoptime As Long) As Long

'添加表格播放
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  left、top、width、height 左、上、宽度、高度
'  transparent 是否透明 =1表示透明；=0表示不透明
'  profile 表格定义文件
'  content 表格内容
'  inmethod 引入方式(下面有列表说明)
'  inspeed 引入速度(取值范围0-5，从快到慢)
'  outmethod 引出方式(下面有列表说明)
'  outspeed 引出速度(取值范围0-5，从快到慢)
'  stopmethod 停留方式(下面有列表说明)
'  stopspeed 停留速度(取值范围0-5，从快到慢)
'  stoptime 停留时间(单位毫秒)
Declare Function AddTable Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal left As Long, ByVal top As Long, ByVal width As Long, ByVal height As Long, ByVal transparent As Long, ByVal profile As String, ByVal content As String, ByVal inmethod As Long, ByVal inspeed As Long, ByVal outmethod As Long, ByVal outspeed As Long, ByVal stopmethod As Long, ByVal stopspeed As Long, ByVal stoptime As Long) As Long

'添加文字播放
'  num 节目数据缓冲区编号，是MakeRoot、MakeChapter、MakeRegion、MakeLeaf、MakeObject的返回值
'  left、top、width、height 左、上、宽度、高度
'  transparent 是否透明 =1表示透明；=0表示不透明
'  border 流水边框(未实现)
'  str 文字字符串
'  fontname 字体名称
'  fontsize 字体大小
'  fontcolor 字体颜色
'  fontstyle 字体样式 举例：=WFS_BOLD表示粗体；=WFS_ITALIC表示斜体；=WFS_BOLD+WFS_ITALIC表示粗斜体
'  wordwrap 是否自动换行 =1自动换行；=0不自动换行
'  inmethod 引入方式(下面有列表说明)
'  inspeed 引入速度(取值范围0-5，从快到慢)
'  outmethod 引出方式(下面有列表说明)
'  outspeed 引出速度(取值范围0-5，从快到慢)
'  stopmethod 停留方式(下面有列表说明)
'  stopspeed 停留速度(取值范围0-5，从快到慢)
'  stoptime 停留时间(单位毫秒)
Declare Function AddText Lib "LEDSender2010.dll" (ByVal Num As Integer, ByVal left As Long, ByVal top As Long, ByVal width As Long, ByVal height As Long, ByVal transparent As Long, ByVal border As Long, ByVal str As String, ByVal fontname As String, ByVal fontsize As Long, ByVal fontcolor As Long, ByVal fontstyle As Long, ByVal wordwrap As Long, ByVal alignment As Long, ByVal inmethod As Long, ByVal inspeed As Long, ByVal outmethod As Long, ByVal outspeed As Long, ByVal stopmethod As Long, ByVal stopspeed As Long, ByVal stoptime As Long) As Long
